// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton should render correctly 1`] = `
<button
  className="btn btn-success"
  onClick={[Function]}
  style={
    Object {
      "margin": "2px",
      "minWidth": "36px",
    }
  }
>
  1
</button>
`;

exports[`ActionButton should render correctly when no ball set 1`] = `
<button
  className="btn btn-success"
  onClick={[Function]}
  style={
    Object {
      "margin": "2px",
      "minWidth": "36px",
      "paddingLeft": "4px",
      "paddingRight": "4px",
    }
  }
>
  <div
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": "50%",
        "borderStyle": "solid",
        "borderWidth": "1px",
      }
    }
  >
    1
  </div>
</button>
`;
